--- a/.classpath
+++ b/.classpath
@@ -52,5 +52,7 @@
 	<classpathentry kind="lib" path="/opt/sun-jdk-1.6.0.17/lib/tools.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/com/opensymphony/xwork/2.0.5/xwork-2.0.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
