--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>tpw</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>Sancalivrer</name>
+	<name>Sanca Livre</name>
 	<url>http://sancalivre.org.br</url>
 	<description>Sanca Livre</description>
 
