--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
 			<artifactId>spring</artifactId>
 			<version>2.5.5</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>crimson</groupId>
+		    <artifactId>crimson</artifactId>
+		    <version>1.1.3</version>
+		</dependency> 
 
 	</dependencies>
 
