--- a/pom.xml
+++ b/pom.xml
@@ -102,10 +102,16 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>crimson</groupId>
-		    <artifactId>crimson</artifactId>
-		    <version>1.1.3</version>
-		</dependency> 
+    		<groupId>jdom</groupId>
+    		<artifactId>jdom</artifactId>
+    		<version>1.1</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>rome</groupId>
+    		<artifactId>rome</artifactId>
+    		<version>0.9</version>
+		</dependency>
 
 	</dependencies>
 
