--- a/.classpath
+++ b/.classpath
@@ -33,10 +33,13 @@
 	<classpathentry exported="true" kind="var" path="M2_REPO/jboss/javassist/3.3.ga/javassist-3.3.ga.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/jboss/jboss-common-core/2.0.4.GA/jboss-common-core-2.0.4.GA.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/slf4j/jcl104-over-slf4j/1.4.2/jcl104-over-slf4j-1.4.2.jar"/>
+	<classpathentry exported="true" kind="var" path="M2_REPO/jdom/jdom/1.0/jdom-1.0.jar"/>
+	<classpathentry exported="true" kind="var" path="M2_REPO/org/jdom/jdom/1.1/jdom-1.1.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/junit/junit/4.0/junit-4.0.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/log4j/log4j/1.2.13/log4j-1.2.13.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/opensymphony/ognl/2.6.11/ognl-2.6.11.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/postgresql/postgresql/8.3-603.jdbc4/postgresql-8.3-603.jdbc4.jar"/>
+	<classpathentry exported="true" kind="var" path="M2_REPO/rome/rome/0.9/rome-0.9.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/opensymphony/sitemesh/2.2.1/sitemesh-2.2.1.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.4.2/slf4j-api-1.4.2.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.4.2/slf4j-log4j12-1.4.2.jar"/>
@@ -49,7 +52,7 @@
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/apache/struts/struts2-core/2.0.11.2/struts2-core-2.0.11.2.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/apache/struts/struts2-sitemesh-plugin/2.0.11.2/struts2-sitemesh-plugin-2.0.11.2.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/apache/struts/struts2-spring-plugin/2.0.11.2/struts2-spring-plugin-2.0.11.2.jar"/>
-	<classpathentry kind="lib" path="/opt/sun-jdk-1.6.0.17/lib/tools.jar"/>
+	<classpathentry kind="lib" path="/usr/lib/jvm/java-6-sun-1.6.0.16/lib/tools.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/com/opensymphony/xwork/2.0.5/xwork-2.0.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="output" path="target/classes"/>
