--- a/pom.xml
+++ b/pom.xml
@@ -135,4 +135,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>java.net</id>
+			<name>The Java.net Maven repository</name>
+			<url>http://download.java.net/maven/2</url>
+		</repository>
+	</repositories>
 </project>
